Дополнил настройки для GC